[project]
name = "axon-shared"
dynamic = ["version"]
description = "Shared protocol definitions and utilities for the Axon network management platform"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Taurine Technology", email = "info@taurinetech.com" }
]
dependencies = [
    "protobuf==6.33.2",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools==1.76.0",
    "flake8>=6.0",
]
test = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "axon_shared.__version__"}

[tool.setuptools.packages.find]
include = ["axon_shared*"]

[tool.flake8]
max-line-length = 120
exclude = ["*_pb2.py", "*_pb2_grpc.py"]